# computer_use_py

./: .gitignore  CLAUDE.md  MANIFEST.in  README.md  build.sh  pyproject.toml  setup.py
native_code/osx/: CMakeLists.txt
native_code/osx/include/: capture.h  control.h  display.h
native_code/osx/src/: capture.m  control.c  display.c  ext.c
src/scapkit_computer_use/: __init__.py
src/scapkit_computer_use/screen_capture_kit/: __init__.py  _scapkit.pyi  keys.py  types.py
tests/: test_capture.py  test_keyboard.py  test_list_displays.py  test_mouse.py
